# munin-solr-plugins

./: COPYING  ChangeLog  Makefile  Makefile.am  README  configure.ac  solr.conf
debian/: changelog  control  copyright  dirs  links  rules
plugins/: solr_request_per_second  solr_time_per_request
